# graphics_lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asset_manager.cpp  asset_manager.h  common.h  graphics.h  graphics_lib.h  interface.h  otb_window.cpp  otb_window.h  render_engine.cpp  render_engine.h
Configs/: default.json  default.yaml
Dep/glad/: glad.c  glad.h
Dep/glm/: glm.hpp
Meshes/: Chair.mtl  staircase.mtl
Meshes/bg_meshes/: stair.mtl
Meshes/chair_scenes/: chair_cornell_box_0_0.00.json  chair_cornell_box_120_0.00.json  chair_cornell_box_150_0.00.json  chair_cornell_box_180_0.00.json  chair_cornell_box_210_0.00.json  chair_cornell_box_240_0.00.json  chair_cornell_box_270_0.00.json  chair_cornell_box_300_0.00.json  chair_cornell_box_330_0.00.json  chair_cornell_box_60_0.00.json  chair_curve_background_0_0.00.json  chair_curve_background_120_0.00.json  chair_curve_background_150_0.00.json  chair_curve_background_180_0.00.json  chair_curve_background_210_0.00.json  chair_curve_background_240_0.00.json  chair_curve_background_270_0.00.json  chair_curve_background_300_0.00.json  chair_curve_background_30_0.00.json  chair_curve_background_330_0.00.json  chair_curve_background_60_0.00.json  chair_curve_background_90_0.00.json  chair_plane_0_0.00.json  chair_plane_120_0.00.json  chair_plane_150_0.00.json  chair_plane_180_0.00.json  chair_plane_210_0.00.json  chair_plane_240_0.00.json  chair_plane_270_0.00.json  chair_plane_300_0.00.json  chair_plane_30_0.00.json  chair_plane_330_0.00.json  chair_plane_90_0.00.json  chair_stair_0_0.00.json  chair_stair_120_0.00.json  chair_stair_150_0.00.json  chair_stair_180_0.00.json  chair_stair_210_0.00.json  chair_stair_240_0.00.json  chair_stair_270_0.00.json  (+5 more)
Meshes/eccv_train/: 00003_pyramid_plane_34.6817_65.65642.json  00005_pyramid_plane_47.7833_-77.85898.json  00009_pyramid_plane_35.89047_55.373566.json  00011_pyramid_plane_18.681469_-43.963203.json  00013_pyramid_plane_17.348745_-37.78618.json  00014_pyramid_plane_17.693504_8.482361.json  00015_pyramid_plane_28.693882_61.46068.json  00018_pyramid_stair_48.169918_85.538376.json  00020_pyramid_stair_41.512016_73.8495.json  00021_pyramid_stair_47.39895_73.64609.json  00022_pyramid_stair_33.430386_13.391907.json  00024_pyramid_stair_42.235367_10.43959.json  00027_pyramid_stair_22.606815_-33.38273.json  00029_pyramid_stair_18.176615_-23.646751.json  00030_pyramid_stair_23.928528_13.96283.json  00031_pyramid_stair_35.375755_33.760323.json  00032_pyramid_cornell_box_15.668474_88.30017.json  00033_pyramid_cornell_box_16.466497_54.193497.json  00034_pyramid_cornell_box_49.61624_11.776291.json  00035_pyramid_cornell_box_47.74755_-78.50668.json  00036_pyramid_cornell_box_22.768353_46.59874.json  00037_pyramid_cornell_box_45.4173_-69.9993.json  00038_pyramid_cornell_box_44.823013_50.226074.json  00039_pyramid_cornell_box_33.830727_-20.574844.json  00040_pyramid_cornell_box_20.340233_-50.346123.json  00041_pyramid_cornell_box_29.67915_34.85086.json  00042_pyramid_cornell_box_37.80833_-7.9742737.json  00043_pyramid_cornell_box_16.014217_-80.441986.json  00044_pyramid_cornell_box_39.332924_-22.220276.json  00045_pyramid_cornell_box_36.668602_-66.73219.json  00046_pyramid_cornell_box_23.758707_74.18793.json  00047_pyramid_cornell_box_23.467037_87.33559.json  00049_pyramid_curve_background_44.09764_13.634926.json  00050_pyramid_curve_background_20.665833_66.24336.json  00051_pyramid_curve_background_19.494568_25.226028.json  00052_pyramid_curve_background_38.64_40.444702.json  00053_pyramid_curve_background_31.941324_77.38814.json  00054_pyramid_curve_background_21.760586_15.155975.json  00056_pyramid_curve_background_42.53427_-22.995628.json  00057_pyramid_curve_background_29.782383_25.179558.json  (+2464 more)
Meshes/eccv_train_2/: 00000_pyramid_plane_43.096863_46.51198.json  00000_voroni_bear_plane_43.096863_46.51198.json  00001_pyramid_plane_22.29863_50.06546.json  00001_voroni_bear_plane_22.29863_50.06546.json  00002_pyramid_plane_48.61898_-87.896194.json  00002_voroni_bear_plane_48.61898_-87.896194.json  00003_pyramid_plane_34.6817_65.65642.json  00003_voroni_bear_plane_34.6817_65.65642.json  00004_pyramid_plane_37.933052_69.94783.json  00004_voroni_bear_plane_37.933052_69.94783.json  00005_pyramid_plane_47.7833_-77.85898.json  00005_voroni_bear_plane_47.7833_-77.85898.json  00006_pyramid_plane_31.102816_-84.25015.json  00006_voroni_bear_plane_31.102816_-84.25015.json  00007_pyramid_plane_43.49747_-29.862503.json  (+436 more)
Meshes/fg_meshes/: vase.mtl  (+1 more)
Render/: geo.cpp  geo.h  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  ppc.cpp  ppc.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  signed_distance_field.cpp  signed_distance_field.cu  signed_distance_field.h
Shaders/: draw_shadow_fs.glsl  draw_shadow_vs.glsl  ground_fs.glsl  mask_fs.glsl  mask_vs.glsl  quad_fs.glsl  quad_vs.glsl  shadow_map_fs.glsl  shadow_map_vs.glsl  sihouette_fs.glsl  template_fs.glsl  template_vs.glsl  transparent_fs.glsl  transparent_vs.glsl
UI/: imgui_guizmo.cpp  imgui_guizmo.h  otb_window.cpp  otb_window.h
Utilities/: Image.cpp  Image.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h  arcball.cpp  arcball.h  cuda_helper.h  cxxopts.h  cxxopts.hpp  model_loader.cpp  model_loader.h  ogl_helper.cpp  ogl_helper.h  rapidjson_helper.cpp  rapidjson_helper.h  ray_intersect.cpp  ray_intersect.h  voxelization.cpp  voxelization.h
(+2690 files in other folders)
